bk_ida/gccida/c0/emit_output_reload_insns
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_output_reload_insns/src/reload1.c:7110:1: error: must use 'enum' tag to refer to type 'insn_code'
insn_code tertiary_icode; // [rsp+B0h] [rbp-60h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_output_reload_insns/src/reload1.c:7115:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // [rsp+D4h] [rbp-3Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_output_reload_insns/src/reload1.c:7133:44: error: too many arguments provided to function-like macro invocation
fatal_insn( "VOIDmode on an output", insn, &off_88ECD0[4], 6651, "emit_output_reload_insns"); 
                                           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_output_reload_insns/src/toplev.h:50:9: note: macro 'fatal_insn' defined here
#define fatal_insn(msgid, insn) \
        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_output_reload_insns/src/reload1.c:7133:1: error: use of undeclared identifier 'fatal_insn'; did you mean '_fatal_insn'?
fatal_insn( "VOIDmode on an output", insn, &off_88ECD0[4], 6651, "emit_output_reload_insns"); 
^~~~~~~~~~
_fatal_insn
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_output_reload_insns/src/toplev.h:44:13: note: '_fatal_insn' declared here
extern void _fatal_insn                 PARAMS ((const char *,
            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_output_reload_insns/src/reload1.c:7135:19: error: invalid suffix 'xmode' on integer constant
mode = *(short *)0xmode; 
                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_output_reload_insns/src/reload1.c:7136:31: error: invalid suffix 'xmode' on integer constant
old = gen_rtx_REG( *(short *)0xmode, reloadreg->fld[0].rtint); 
                              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_output_reload_insns/src/reload1.c:7175:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)real_old->fld[0].rtwint), 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_output_reload_insns/src/reload1.c:7175:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)real_old->fld[0].rtwint), 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_output_reload_insns/src/reload1.c:7184:6: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
v5 = insn_data_0[tertiary_icode].genfun( real_old, reloadreg, third_reloadreg); 
     ^~~~~~~~~~~
     insn_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_output_reload_insns/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_output_reload_insns/src/reload1.c:7184:40: error: called object type '<dependent type>' is not a function or function pointer
v5 = insn_data_0[tertiary_icode].genfun( real_old, reloadreg, third_reloadreg); 
                                       ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_output_reload_insns/src/reload1.c:7191:6: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
v4 = insn_data_0[rl->secondary_out_icode].genfun( real_old, second_reloadreg, reloadreg); 
     ^~~~~~~~~~~
     insn_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_output_reload_insns/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_output_reload_insns/src/reload1.c:7191:49: error: called object type '<dependent type>' is not a function or function pointer
v4 = insn_data_0[rl->secondary_out_icode].genfun( real_old, second_reloadreg, reloadreg); 
                                                ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_output_reload_insns/src/reload1.c:7205:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
: ( v14 = ( rtx)insn[2]), 
                ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_output_reload_insns/src/reload1.c:7219:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
pat = (  struct rtx_def *)p[2]; 
                          ^~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_output_reload_insns/src/reload1.c:7226:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v12 = ( rtx)insn[2]; 
            ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_output_reload_insns/src/reload1.c:7239:12: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
if ( ( rtx)v11[1] == rl->reg_rtx ) 
           ^~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_output_reload_insns/src/reload1.c:7254:60: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v10 = ( unsigned __int16)**( _DWORD **)&p[2] == 47 ? ( rtx)p[2] : single_set_2( p, *( rtx *)&p[2]); 
                                                           ^~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_output_reload_insns/src/reload1.c:7263:22: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
if ( s >= 0 && ( rtx)v9[1] == rl->reg_rtx && ( rtx)v9->fld[0].rtwint == rld[s].reg_rtx ) 
                     ^~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_output_reload_insns/src/reload1.c:7272:12: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v8 = ( rtx)next[2]; 
           ^~~~~~~
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_output_reload_insns/src/obj/reload1.o] Error 1
